samples/_failures_safe/1761421370_c22763_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bca6648.c: In function ‘main’:
./samples/SAFE/__tmp_8bca6648.c:173:5: error: expected expression at end of input
  173 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_8bca6648.c:173:5: error: expected declaration or statement at end of input
